--- a/index.html
+++ b/index.html
@@ -15,32 +15,43 @@
     <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#2c7744">
     
+    <!-- Primary Meta Tags -->
     <title>TropicaFarm - Premium Indonesian Tea & Essential Oils Exporter | Black Tea, Green Tea, Nutmeg Oil, Patchouli Oil</title>
     <meta name="description" content="TropicaFarm is Indonesia's trusted exporter of premium teas and essential oils. We offer high-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced directly from sustainable Indonesian plantations. Certified organic products available for global markets.">
     <meta name="keywords" content="Indonesian tea export, premium tea supplier, black tea wholesale, green tea export, nutmeg oil manufacturer, patchouli oil supplier, organic tea Indonesia, essential oils export, Indonesian agriculture products, sustainable farming">
     <meta name="author" content="TropicaFarm">
-    <meta name="robots" content="index, follow, max-image-preview:large">
-    <meta name="googlebot" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="revisit-after" content="7 days">
     <meta name="language" content="English">
     <meta name="geo.region" content="ID">
     <meta name="geo.placename" content="Purwakarta">
+    <meta name="geo.position" content="-6.5552;107.4431">
+    <meta name="ICBM" content="-6.5552, 107.4431">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="TropicaFarm - Premium Indonesian Tea & Essential Oils Exporter">
     <meta property="og:description" content="Indonesia's trusted exporter of premium teas and essential oils. High-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil from sustainable plantations.">
-    <meta property="og:image" content="assets/images/java-tea-harvest.jpg">
+    <meta property="og:image" content="https://tropicafarm.com/assets/images/java-tea-harvest.jpg">
     <meta property="og:url" content="https://tropicafarm.com">
     <meta property="og:site_name" content="TropicaFarm">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="id_ID">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@tropicafarm">
+    <meta name="twitter:creator" content="@tropicafarm">
     <meta name="twitter:title" content="TropicaFarm - Premium Indonesian Tea & Essential Oils">
     <meta name="twitter:description" content="Discover premium Indonesian teas and essential oils from TropicaFarm. Direct from sustainable plantations to global markets.">
-    <meta name="twitter:image" content="assets/images/java-tea-harvest.jpg">
+    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/java-tea-harvest.jpg">
 
+    <!-- Additional Meta Tags -->
     <link rel="canonical" href="https://tropicafarm.com">
+    <link rel="alternate" hreflang="en" href="https://tropicafarm.com">
+    <link rel="alternate" hreflang="id" href="https://tropicafarm.com/id">
+    <link rel="alternate" hreflang="x-default" href="https://tropicafarm.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
@@ -101,7 +112,7 @@
       "@type": "Organization",
       "name": "TropicaFarm",
       "url": "https://tropicafarm.com",
-      "logo": "assets/images/java-tea-harvest.jpg",
+      "logo": "https://tropicafarm.com/assets/images/black-tea.jpg",
       "description": "Premium Indonesian tea and essential oils exporter",
       "address": {
         "@type": "PostalAddress",
@@ -116,14 +127,62 @@
         "telephone": "+62-812-1256-0026",
         "contactType": "sales",
         "email": "info@tropicafarm.com",
-        "availableLanguage": ["en", "id"]
+        "availableLanguage": ["en", "id"],
+        "areaServed": "Worldwide"
       },
       "sameAs": [
         "https://facebook.com/tropicafarm",
         "https://instagram.com/tropicafarm",
         "https://linkedin.com/company/tropicafarm",
         "https://twitter.com/tropicafarm"
-      ]
+      ],
+      "foundingDate": "2004",
+      "founder": {
+        "@type": "Person",
+        "name": "TropicaFarm Team"
+      },
+      "areaServed": {
+        "@type": "Country",
+        "name": "Worldwide"
+      },
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Premium Tea and Essential Oils",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Black Tea",
+              "description": "Premium Indonesian black tea with rich, full-bodied flavor"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Green Tea",
+              "description": "High-quality Indonesian green tea with delicate flavor"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Nutmeg Oil",
+              "description": "Pure Indonesian nutmeg essential oil"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Patchouli Oil",
+              "description": "Premium Indonesian patchouli essential oil"
+            }
+          }
+        ]
+      }
     }
     </script>
 </head>
