--- a/products/tea.html
+++ b/products/tea.html
@@ -15,8 +15,43 @@
     <meta name="msapplication-config" content="../assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#2c7744">
     
+    <!-- Primary Meta Tags -->
     <title>Premium Indonesian Tea Products - Black Tea & Green Tea | TropicaFarm</title>
     <meta name="description" content="Discover TropicaFarm's premium Indonesian tea products. High-quality Black Tea and Green Tea sourced directly from sustainable plantations. Available for global wholesale.">
+    <meta name="keywords" content="Indonesian black tea, premium green tea, wholesale tea supplier, bulk tea export, sustainable tea plantation, Indonesian tea manufacturer, tea exporter Indonesia, black tea wholesale, green tea export">
+    <meta name="author" content="TropicaFarm">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="revisit-after" content="7 days">
+    <meta name="language" content="English">
+    <meta name="geo.region" content="ID">
+    <meta name="geo.placename" content="Purwakarta">
+    <meta name="geo.position" content="-6.5552;107.4431">
+    <meta name="ICBM" content="-6.5552, 107.4431">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="product">
+    <meta property="og:title" content="Premium Indonesian Tea Products - Black Tea & Green Tea | TropicaFarm">
+    <meta property="og:description" content="Discover premium Indonesian tea products from TropicaFarm. High-quality Black Tea and Green Tea sourced from sustainable plantations. Available for global wholesale.">
+    <meta property="og:image" content="https://tropicafarm.com/assets/images/tea-harvesting.jpg">
+    <meta property="og:url" content="https://tropicafarm.com/products/tea.html">
+    <meta property="og:site_name" content="TropicaFarm">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="id_ID">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@tropicafarm">
+    <meta name="twitter:creator" content="@tropicafarm">
+    <meta name="twitter:title" content="Premium Indonesian Tea Products - Black Tea & Green Tea">
+    <meta name="twitter:description" content="Discover premium Indonesian tea products from TropicaFarm. High-quality Black Tea and Green Tea sourced from sustainable plantations.">
+    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/tea-harvesting.jpg">
+
+    <!-- Additional Meta Tags -->
+    <link rel="canonical" href="https://tropicafarm.com/products/tea.html">
+    <link rel="alternate" hreflang="en" href="https://tropicafarm.com/products/tea.html">
+    <link rel="alternate" hreflang="id" href="https://tropicafarm.com/id/products/tea.html">
+    <link rel="alternate" hreflang="x-default" href="https://tropicafarm.com/products/tea.html">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -562,6 +597,85 @@
                 disableOnInteraction: false,
             },
         });
+    </script>
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "Premium Indonesian Tea Products",
+      "description": "High-quality Black Tea and Green Tea sourced from sustainable Indonesian plantations",
+      "brand": {
+        "@type": "Brand",
+        "name": "TropicaFarm"
+      },
+      "offers": {
+        "@type": "AggregateOffer",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock",
+        "seller": {
+          "@type": "Organization",
+          "name": "TropicaFarm"
+        }
+      },
+      "category": "Tea Products",
+      "image": "https://tropicafarm.com/assets/images/tea-harvesting.jpg",
+      "url": "https://tropicafarm.com/products/tea.html",
+      "sku": "TF-TEA-001",
+      "gtin": "TF-TEA-001",
+      "productionDate": "2024",
+      "award": "Premium Quality Certification",
+      "material": "Tea Leaves",
+      "color": "Black, Green",
+      "countryOfOrigin": {
+        "@type": "Country",
+        "name": "Indonesia"
+      },
+      "hasMerchantReturnPolicy": {
+        "@type": "MerchantReturnPolicy",
+        "applicableCountry": "Worldwide",
+        "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+        "merchantReturnDays": 30,
+        "returnMethod": "https://schema.org/ReturnByMail",
+        "returnFees": "https://schema.org/FreeReturn"
+      },
+      "additionalProperty": [
+        {
+          "@type": "PropertyValue",
+          "name": "Production Capacity",
+          "value": "150 tons/month"
+        },
+        {
+          "@type": "PropertyValue",
+          "name": "Minimum Order",
+          "value": "1 ton"
+        },
+        {
+          "@type": "PropertyValue",
+          "name": "Packaging",
+          "value": "25kg kraft paper bags"
+        },
+        {
+          "@type": "PropertyValue",
+          "name": "Shelf Life",
+          "value": "24 months"
+        }
+      ],
+      "review": {
+        "@type": "Review",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "5",
+          "bestRating": "5"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Ahmad Surya"
+        },
+        "reviewBody": "TropicaFarm's black tea quality is exceptional. As a wholesale distributor in Semarang, we've been sourcing their products for 3 years and consistently receive positive feedback from our business clients."
+      }
+    }
     </script>
 </body>
 </html> 
