update to whatsapp in order

--- a/products/essential-oils.html
+++ b/products/essential-oils.html
@@ -372,7 +372,7 @@
 
                 <!-- Product Information -->
                 <div class="lg:w-1/2">
-                    <span class="bg-primary/10 text-primary px-4 py-2 rounded-full text-sm font-medium">Best Seller</span>
+                    <!-- <span class="bg-primary/10 text-primary px-4 py-2 rounded-full text-sm font-medium">Best Seller</span> -->
                     <h2 class="text-4xl font-bold text-primary mt-4 mb-6">Nutmeg Oil</h2>
                     <p class="text-gray-600 text-lg mb-8">Our premium nutmeg oil offers a warm, spicy aroma with therapeutic properties. Carefully extracted from mature nutmeg seeds, it's perfect for various applications from aromatherapy to food flavoring.</p>
 
@@ -417,7 +417,7 @@
             <div class="flex flex-col lg:flex-row gap-12">
                 <!-- Product Information -->
                 <div class="lg:w-1/2">
-                    <span class="bg-secondary/10 text-secondary px-4 py-2 rounded-full text-sm font-medium">Premium</span>
+                    <!-- <span class="bg-secondary/10 text-secondary px-4 py-2 rounded-full text-sm font-medium">Premium</span> -->
                     <h2 class="text-4xl font-bold text-primary mt-4 mb-6">Patchouli Oil</h2>
                     <p class="text-gray-600 text-lg mb-8">Our premium patchouli oil provides a rich, earthy aroma with excellent fixative properties. Carefully distilled from high-quality patchouli leaves, perfect for perfumery and aromatherapy applications.</p>
 
@@ -496,8 +496,8 @@
                             <div class="ml-auto w-5/12 pl-6">
                                 <h3 class="text-lg font-medium mb-1">Initial Inquiry</h3>
                                 <p class="text-gray-600 text-sm mb-2">Send us your product requirements and specifications</p>
-                                <a href="mailto:info@tropicafarm.com" class="inline-flex items-center text-primary hover:text-accent text-sm font-medium">
-                                    <i class="fas fa-envelope mr-1"></i> Send Inquiry
+                                <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20discuss%20tea%20products" target="_blank" class="inline-flex items-center text-primary hover:text-accent text-sm font-medium">
+                                    <i class="fab fa-whatsapp mr-1"></i> Send Inquiry
                                 </a>
                             </div>
                         </div>
