--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <div class="p-8">
                         <div class="flex justify-between items-center mb-6">
                             <h3 class="text-3xl font-bold text-primary">Tea Products</h3>
-                            <span class="bg-primary/10 text-primary px-4 py-2 rounded-full text-sm font-medium">Best Seller</span>
+                            <!-- <span class="bg-primary/10 text-primary px-4 py-2 rounded-full text-sm font-medium">Best Seller</span> -->
                         </div>
                         <p class="text-gray-600 mb-6 text-lg">Our premium tea collection includes both Black and Green tea varieties, harvested from Indonesia's highland plantations and processed to perfection.</p>
                         
@@ -368,7 +368,7 @@
                     <div class="p-8">
                         <div class="flex justify-between items-center mb-6">
                             <h3 class="text-3xl font-bold text-primary">Essential Oils</h3>
-                            <span class="bg-secondary/10 text-secondary px-4 py-2 rounded-full text-sm font-medium">Premium</span>
+                            <!-- <span class="bg-secondary/10 text-secondary px-4 py-2 rounded-full text-sm font-medium">Premium</span> -->
                         </div>
                         <p class="text-gray-600 mb-6 text-lg">Pure, high-quality essential oils including Nutmeg and Patchouli, extracted through advanced distillation processes for optimal potency.</p>
                         
