remove premium label in green tea

--- a/products/tea.html
+++ b/products/tea.html
@@ -344,7 +344,7 @@
             <div class="flex flex-col lg:flex-row gap-12">
                 <!-- Product Information -->
                 <div class="lg:w-1/2">
-                    <span class="bg-secondary/10 text-secondary px-4 py-2 rounded-full text-sm font-medium">Premium</span>
+                    <!-- <span class="bg-secondary/10 text-secondary px-4 py-2 rounded-full text-sm font-medium">Premium</span> -->
                     <h2 class="text-4xl font-bold text-primary mt-4 mb-6">Green Tea</h2>
                     <p class="text-gray-600 text-lg mb-8">Our green tea provides a delicate, refreshing flavor with grassy notes and a subtle sweetness. Minimally processed to preserve natural benefits and flavor, perfect for premium tea products and health-conscious markets.</p>
 
