change branding from premium to Leading

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta name="theme-color" content="#2c7744">
     
     <!-- Primary Meta Tags -->
-    <title>TropicaFarm - Premium Indonesian Tea & Essential Oils Exporter | Black Tea, Green Tea, Nutmeg Oil, Patchouli Oil</title>
-    <meta name="description" content="TropicaFarm is Indonesia's trusted exporter of premium teas and essential oils. We offer high-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced directly from sustainable Indonesian plantations. Certified organic products available for global markets.">
+    <title>TropicaFarm - Leading Indonesian Tea & Essential Oils Exporter | Black Tea, Green Tea, Nutmeg Oil, Patchouli Oil</title>
+    <meta name="description" content="TropicaFarm is Indonesia's established exporter of high-quality teas and essential oils. We offer Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced directly from sustainable Indonesian plantations. Certified products available for global markets.">
     <meta name="keywords" content="Indonesian tea export, premium tea supplier, black tea wholesale, green tea export, nutmeg oil manufacturer, patchouli oil supplier, organic tea Indonesia, essential oils export, Indonesian agriculture products, sustainable farming">
     <meta name="author" content="TropicaFarm">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
@@ -31,8 +31,8 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="TropicaFarm - Premium Indonesian Tea & Essential Oils Exporter">
-    <meta property="og:description" content="Indonesia's trusted exporter of premium teas and essential oils. High-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil from sustainable plantations.">
+    <meta property="og:title" content="TropicaFarm - Leading Indonesian Tea & Essential Oils Exporter">
+    <meta property="og:description" content="Indonesia's established exporter of high-quality teas and essential oils. Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil from sustainable plantations.">
     <meta property="og:image" content="https://tropicafarm.com/assets/images/java-tea-harvest.jpg">
     <meta property="og:url" content="https://tropicafarm.com">
     <meta property="og:site_name" content="TropicaFarm">
@@ -43,8 +43,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@tropicafarm">
     <meta name="twitter:creator" content="@tropicafarm">
-    <meta name="twitter:title" content="TropicaFarm - Premium Indonesian Tea & Essential Oils">
-    <meta name="twitter:description" content="Discover premium Indonesian teas and essential oils from TropicaFarm. Direct from sustainable plantations to global markets.">
+    <meta name="twitter:title" content="TropicaFarm - Leading Indonesian Tea & Essential Oils">
+    <meta name="twitter:description" content="Discover high-quality Indonesian teas and essential oils from TropicaFarm. Direct from sustainable plantations to global markets.">
     <meta name="twitter:image" content="https://tropicafarm.com/assets/images/java-tea-harvest.jpg">
 
     <!-- Additional Meta Tags -->
@@ -113,7 +113,7 @@
       "name": "TropicaFarm",
       "url": "https://tropicafarm.com",
       "logo": "https://tropicafarm.com/assets/images/black-tea.jpg",
-      "description": "Premium Indonesian tea and essential oils exporter",
+      "description": "Leading Indonesian tea and essential oils exporter",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "PT Global Tropica Farmindo",
@@ -147,14 +147,14 @@
       },
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
-        "name": "Premium Tea and Essential Oils",
+        "name": "High-Quality Tea and Essential Oils",
         "itemListElement": [
           {
             "@type": "Offer",
             "itemOffered": {
               "@type": "Product",
               "name": "Black Tea",
-              "description": "Premium Indonesian black tea with rich, full-bodied flavor"
+              "description": "Leading Indonesian black tea with rich, full-bodied flavor"
             }
           },
           {
@@ -178,7 +178,7 @@
             "itemOffered": {
               "@type": "Product",
               "name": "Patchouli Oil",
-              "description": "Premium Indonesian patchouli essential oil"
+              "description": "Leading Indonesian patchouli essential oil"
             }
           }
         ]
@@ -220,8 +220,8 @@
     <!-- Hero Section -->
     <section class="hero h-screen flex items-center text-white pt-16">
         <div class="container mx-auto px-4 text-center">
-            <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6 leading-tight">Premium Indonesian Tea & Essential Oils</h1>
-            <p class="text-lg md:text-xl mb-8 max-w-3xl mx-auto">Discover the finest Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced sustainably from Indonesian farms.</p>
+            <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6 leading-tight">Leading Indonesian Tea & Essential Oils</h1>
+            <p class="text-lg md:text-xl mb-8 max-w-3xl mx-auto">Discover our high-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced sustainably from Indonesian farms.</p>
             <div class="flex flex-col sm:flex-row justify-center gap-4">
                 <a href="#contact" class="bg-primary hover:bg-accent text-white px-8 py-3 rounded-lg transition duration-300 font-medium flex items-center justify-center">
                     <i class="fas fa-envelope mr-2"></i> Request a Quote
@@ -315,7 +315,7 @@
     <section id="products" class="py-20">
         <div class="container mx-auto px-6">
             <div class="text-center mb-16">
-                <h2 class="text-4xl font-bold text-primary mb-4">Our Premium Products</h2>
+                <h2 class="text-4xl font-bold text-primary mb-4">Our High-Quality Products</h2>
                 <p class="text-gray-600 max-w-3xl mx-auto text-lg">Discover our high-quality teas and essential oils, sourced from the finest plantations in Indonesia and processed with modern facilities under strict quality control.</p>
             </div>
             <div class="grid md:grid-cols-2 gap-12">
@@ -329,7 +329,7 @@
                             <h3 class="text-3xl font-bold text-primary">Tea Products</h3>
                             <!-- <span class="bg-primary/10 text-primary px-4 py-2 rounded-full text-sm font-medium">Best Seller</span> -->
                         </div>
-                        <p class="text-gray-600 mb-6 text-lg">Our premium tea collection includes both Black and Green tea varieties, harvested from Indonesia's highland plantations and processed to perfection.</p>
+                        <p class="text-gray-600 mb-6 text-lg">Our high-quality tea collection includes both Black and Green tea varieties, harvested from Indonesia's highland plantations and processed to perfection.</p>
                         
                         <div class="flex flex-wrap gap-3 mb-8">
                             <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">Black Tea</span>
@@ -596,7 +596,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-12">
                 <div>
                     <h3 class="text-2xl font-bold text-white mb-6">TropicaFarm</h3>
-                    <p class="text-gray-400 mb-6">Premium Indonesian tea and essential oils for global markets. Harvested from Indonesia's finest plantations.</p>
+                    <p class="text-gray-400 mb-6">Leading Indonesian tea and essential oils for global markets. Harvested from Indonesia's finest plantations.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white transition">
                             <i class="fab fa-facebook-f"></i>
