--- a/products/essential-oils.html
+++ b/products/essential-oils.html
@@ -16,8 +16,8 @@
     <meta name="theme-color" content="#2c7744">
     
     <!-- Primary Meta Tags -->
-    <title>Premium Indonesian Essential Oils - Patchouli, Nutmeg, Clove & Citronella Oil | TropicaFarm</title>
-    <meta name="description" content="Discover TropicaFarm's premium Indonesian essential oils. High-quality Patchouli Oil, Nutmeg Oil, Clove Oil, and Citronella Oil sourced directly from sustainable plantations. Available for global wholesale.">
+    <title>Leading Indonesian Essential Oils - Patchouli, Nutmeg, Clove & Citronella Oil | TropicaFarm</title>
+    <meta name="description" content="Discover TropicaFarm's high-quality Indonesian essential oils. Patchouli Oil, Nutmeg Oil, Clove Oil, and Citronella Oil sourced directly from sustainable plantations. Available for global wholesale.">
     <meta name="keywords" content="Indonesian patchouli oil, premium nutmeg oil, wholesale essential oils, bulk essential oils export, sustainable essential oils, Indonesian essential oils manufacturer, essential oils exporter Indonesia, clove oil wholesale, citronella oil export">
     <meta name="author" content="TropicaFarm">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
@@ -31,8 +31,8 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="product">
-    <meta property="og:title" content="Premium Indonesian Essential Oils - Patchouli, Nutmeg, Clove & Citronella Oil | TropicaFarm">
-    <meta property="og:description" content="Discover premium Indonesian essential oils from TropicaFarm. High-quality Patchouli Oil, Nutmeg Oil, Clove Oil, and Citronella Oil sourced from sustainable plantations. Available for global wholesale.">
+    <meta property="og:title" content="Leading Indonesian Essential Oils - Patchouli, Nutmeg, Clove & Citronella Oil | TropicaFarm">
+    <meta property="og:description" content="Discover high-quality Indonesian essential oils from TropicaFarm. Patchouli Oil, Nutmeg Oil, Clove Oil, and Citronella Oil sourced from sustainable plantations. Available for global wholesale.">
     <meta property="og:image" content="https://tropicafarm.com/assets/images/nutmeg-oil.jpg">
     <meta property="og:url" content="https://tropicafarm.com/products/essential-oils.html">
     <meta property="og:site_name" content="TropicaFarm">
@@ -43,8 +43,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@tropicafarm">
     <meta name="twitter:creator" content="@tropicafarm">
-    <meta name="twitter:title" content="Premium Indonesian Essential Oils - Patchouli, Nutmeg, Clove & Citronella Oil">
-    <meta name="twitter:description" content="Discover premium Indonesian essential oils from TropicaFarm. High-quality Patchouli Oil, Nutmeg Oil, Clove Oil, and Citronella Oil sourced from sustainable plantations.">
+    <meta name="twitter:title" content="Leading Indonesian Essential Oils - Patchouli, Nutmeg, Clove & Citronella Oil">
+    <meta name="twitter:description" content="Discover high-quality Indonesian essential oils from TropicaFarm. Patchouli Oil, Nutmeg Oil, Clove Oil, and Citronella Oil sourced from sustainable plantations.">
     <meta name="twitter:image" content="https://tropicafarm.com/assets/images/nutmeg-oil.jpg">
 
     <!-- Additional Meta Tags -->
@@ -264,7 +264,7 @@
         </video>
         <div class="container mx-auto px-6 py-12">
             <div class="max-w-3xl">
-                <h1 class="text-4xl md:text-5xl font-bold mb-4 leading-tight">Premium Indonesian Essential Oils</h1>
+                <h1 class="text-4xl md:text-5xl font-bold mb-4 leading-tight">Two Decades of Excellence in Essential Oils</h1>
                 <p class="text-lg mb-6 leading-relaxed">Discover our high-quality Patchouli Oil, Nutmeg Oil, Clove Oil, and Citronella Oil, extracted from the finest Indonesian plantations using traditional and modern distillation methods.</p>
                 <div class="flex flex-wrap gap-4">
                     <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20essential%20oils" target="_blank" class="bg-primary hover:bg-accent text-white px-8 py-3 rounded-xl transition duration-300 inline-flex items-center">
@@ -374,7 +374,7 @@
                 <div class="lg:w-1/2">
                     <!-- <span class="bg-primary/10 text-primary px-4 py-2 rounded-full text-sm font-medium">Best Seller</span> -->
                     <h2 class="text-4xl font-bold text-primary mt-4 mb-6">Nutmeg Oil</h2>
-                    <p class="text-gray-600 text-lg mb-8">Our premium nutmeg oil offers a warm, spicy aroma with therapeutic properties. Carefully extracted from mature nutmeg seeds, it's perfect for various applications from aromatherapy to food flavoring.</p>
+                    <p class="text-gray-600 text-lg mb-8">Our high-quality nutmeg oil provides a warm, spicy aroma with therapeutic benefits. Steam distilled from premium nutmeg seeds, perfect for cosmetic and pharmaceutical applications.</p>
 
                     <div class="grid grid-cols-2 gap-6 mb-8">
                         <div>
@@ -419,7 +419,7 @@
                 <div class="lg:w-1/2">
                     <!-- <span class="bg-secondary/10 text-secondary px-4 py-2 rounded-full text-sm font-medium">Premium</span> -->
                     <h2 class="text-4xl font-bold text-primary mt-4 mb-6">Patchouli Oil</h2>
-                    <p class="text-gray-600 text-lg mb-8">Our premium patchouli oil provides a rich, earthy aroma with excellent fixative properties. Carefully distilled from high-quality patchouli leaves, perfect for perfumery and aromatherapy applications.</p>
+                    <p class="text-gray-600 text-lg mb-8">Our high-quality patchouli oil offers a rich, earthy aroma with excellent fixative properties. Carefully distilled from mature leaves, it's perfect for various applications from perfumery to aromatherapy.</p>
 
                     <div class="grid grid-cols-2 gap-6 mb-8">
                         <div>
