--- a/products/tea.html
+++ b/products/tea.html
@@ -16,8 +16,8 @@
     <meta name="theme-color" content="#2c7744">
     
     <!-- Primary Meta Tags -->
-    <title>Premium Indonesian Tea Products - Black Tea & Green Tea | TropicaFarm</title>
-    <meta name="description" content="Discover TropicaFarm's premium Indonesian tea products. High-quality Black Tea and Green Tea sourced directly from sustainable plantations. Available for global wholesale.">
+    <title>Leading Indonesian Tea Products - Black Tea & Green Tea | TropicaFarm</title>
+    <meta name="description" content="Discover TropicaFarm's high-quality Indonesian tea products. Black Tea and Green Tea sourced directly from sustainable plantations. Available for global wholesale.">
     <meta name="keywords" content="Indonesian black tea, premium green tea, wholesale tea supplier, bulk tea export, sustainable tea plantation, Indonesian tea manufacturer, tea exporter Indonesia, black tea wholesale, green tea export">
     <meta name="author" content="TropicaFarm">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
@@ -31,8 +31,8 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="product">
-    <meta property="og:title" content="Premium Indonesian Tea Products - Black Tea & Green Tea | TropicaFarm">
-    <meta property="og:description" content="Discover premium Indonesian tea products from TropicaFarm. High-quality Black Tea and Green Tea sourced from sustainable plantations. Available for global wholesale.">
+    <meta property="og:title" content="Leading Indonesian Tea Products - Black Tea & Green Tea | TropicaFarm">
+    <meta property="og:description" content="Discover high-quality Indonesian tea products from TropicaFarm. Black Tea and Green Tea sourced from sustainable plantations. Available for global wholesale.">
     <meta property="og:image" content="https://tropicafarm.com/assets/images/tea-harvesting.jpg">
     <meta property="og:url" content="https://tropicafarm.com/products/tea.html">
     <meta property="og:site_name" content="TropicaFarm">
@@ -43,8 +43,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@tropicafarm">
     <meta name="twitter:creator" content="@tropicafarm">
-    <meta name="twitter:title" content="Premium Indonesian Tea Products - Black Tea & Green Tea">
-    <meta name="twitter:description" content="Discover premium Indonesian tea products from TropicaFarm. High-quality Black Tea and Green Tea sourced from sustainable plantations.">
+    <meta name="twitter:title" content="Leading Indonesian Tea Products - Black Tea & Green Tea">
+    <meta name="twitter:description" content="Discover high-quality Indonesian tea products from TropicaFarm. Black Tea and Green Tea sourced from sustainable plantations.">
     <meta name="twitter:image" content="https://tropicafarm.com/assets/images/tea-harvesting.jpg">
 
     <!-- Additional Meta Tags -->
@@ -301,7 +301,7 @@
                 <div class="lg:w-1/2">
                     <!-- <span class="bg-primary/10 text-primary px-4 py-2 rounded-full text-sm font-medium">Best Seller</span> -->
                     <h2 class="text-4xl font-bold text-primary mt-4 mb-6">Black Tea</h2>
-                    <p class="text-gray-600 text-lg mb-8">Our premium black tea offers a rich, full-bodied flavor with malty notes and a smooth finish. Carefully processed from mature tea leaves, it's perfect for various applications from premium tea bags to ready-to-drink beverages.</p>
+                    <p class="text-gray-600 text-lg mb-8">Our high-quality black tea offers a rich, full-bodied flavor with malty notes and a smooth finish. Carefully processed from mature tea leaves, it's perfect for various applications from tea bags to ready-to-drink beverages.</p>
 
                     <div class="grid grid-cols-2 gap-6 mb-8">
                         <div>
@@ -346,7 +346,7 @@
                 <div class="lg:w-1/2">
                     <!-- <span class="bg-secondary/10 text-secondary px-4 py-2 rounded-full text-sm font-medium">Premium</span> -->
                     <h2 class="text-4xl font-bold text-primary mt-4 mb-6">Green Tea</h2>
-                    <p class="text-gray-600 text-lg mb-8">Our green tea provides a delicate, refreshing flavor with grassy notes and a subtle sweetness. Minimally processed to preserve natural benefits and flavor, perfect for premium tea products and health-conscious markets.</p>
+                    <p class="text-gray-600 text-lg mb-8">Our high-quality green tea provides a delicate, refreshing flavor with grassy notes and a subtle sweetness. Minimally processed to preserve natural benefits and flavor, perfect for tea products and health-conscious markets.</p>
 
                     <div class="grid grid-cols-2 gap-6 mb-8">
                         <div>
