--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <style>
         html { scroll-behavior: smooth; }
         .hero { 
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 
                         url('assets/images/java-tea-harvest.jpg') center/cover no-repeat; 
         }
         .floating-cta { 
@@ -220,7 +220,7 @@
     <!-- Hero Section -->
     <section class="hero h-screen flex items-center text-white pt-16">
         <div class="container mx-auto px-4 text-center">
-            <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6 leading-tight">Leading Indonesian Tea & Essential Oils</h1>
+            <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-6 leading-tight">Leading Indonesian Tea & Essential Oils</h1>
             <p class="text-lg md:text-xl mb-8 max-w-3xl mx-auto">Discover our high-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced sustainably from Indonesian farms.</p>
             <div class="flex flex-col sm:flex-row justify-center gap-4">
                 <a href="#contact" class="bg-primary hover:bg-accent text-white px-8 py-3 rounded-lg transition duration-300 font-medium flex items-center justify-center">
@@ -322,11 +322,13 @@
                 <!-- Tea Products -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl">
                     <div class="overflow-hidden h-80">
-                        <img src="assets/images/black-tea.jpg" alt="Premium Indonesian tea products including black and green tea varieties" class="w-full h-full object-cover" loading="lazy">
+                        <a href="/products/tea.html">
+                            <img src="assets/images/black-tea.jpg" alt="Premium Indonesian tea products including black and green tea varieties" class="w-full h-full object-cover" loading="lazy">
+                        </a>
                     </div>
                     <div class="p-8">
                         <div class="flex justify-between items-center mb-6">
-                            <h3 class="text-3xl font-bold text-primary">Tea Products</h3>
+                            <h3 class="text-3xl font-bold text-primary"><a href="/products/tea.html">Tea Products</a></h3>
                             <!-- <span class="bg-primary/10 text-primary px-4 py-2 rounded-full text-sm font-medium">Best Seller</span> -->
                         </div>
                         <p class="text-gray-600 mb-6 text-lg">Our high-quality tea collection includes both Black and Green tea varieties, harvested from Indonesia's highland plantations and processed to perfection.</p>
@@ -363,11 +365,13 @@
                 <!-- Essential Oils -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl">
                     <div class="overflow-hidden h-80">
-                        <img src="assets/images/nutmeg-oil.jpg" alt="Premium Indonesian essential oils collection" class="w-full h-full object-cover" loading="lazy">
+                        <a href="/products/essential-oils.html">
+                            <img src="assets/images/nutmeg-oil.jpg" alt="Premium Indonesian essential oils collection" class="w-full h-full object-cover" loading="lazy">
+                        </a>
                     </div>
                     <div class="p-8">
                         <div class="flex justify-between items-center mb-6">
-                            <h3 class="text-3xl font-bold text-primary">Essential Oils</h3>
+                            <h3 class="text-3xl font-bold text-primary"><a href="/products/essential-oils.html">Essential Oils</a></h3>
                             <!-- <span class="bg-secondary/10 text-secondary px-4 py-2 rounded-full text-sm font-medium">Premium</span> -->
                         </div>
                         <p class="text-gray-600 mb-6 text-lg">Pure, high-quality essential oils including Nutmeg and Patchouli, extracted through advanced distillation processes for optimal potency.</p>
